perf: reduce test execution time by 73% with single-fork JVM and TieredStopAtLevel=1
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>